edition = "2023";

package wayplatform.connect.tachograph.card.v1;

// Represents the content of the EF_Driving_Licence_Info file, which contains the
// card holder's driving licence information.
//
// The file structure is specified in Appendix 2, Section 4.2.1.
//
//     EF Driving_Licence_Info
//     └─CardDrivingLicenceInformation
//
// The data type `CardDrivingLicenceInformation` is specified in the Data Dictionary, Section 2.18.
//
// ASN.1 Specification:
//
//     CardDrivingLicenceInformation ::= SEQUENCE {
//         drivingLicenceIssuingAuthority Name,
//         drivingLicenceIssuingNation NationNumeric,
//         drivingLicenceNumber IA5String(SIZE(16))
//     }
message DrivingLicenceInfo {
  // Authority that issued the driving licence.
  string driving_licence_issuing_authority = 1;

  // Nation of the issuing authority. See DD Section 2.101 for `NationNumeric`.
  int32 driving_licence_issuing_nation = 2;

  // The driving licence number.
  string driving_licence_number = 3;

  // Digital signature for the EF_Driving_Licence_Info file content.
  bytes signature = 4;
}